--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chto-takoe-peremennaya",
+  "name": "metalexa",
   "version": "0.1.0",
   "private": false,
   "homepage": "https://oleksanderkorn.github.io/metalexa",
